--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Test for GITHUB MINI COURSE</title>
 </head>
 <body>
+    <img src="BP.JPG"/>
     <h1>Hello Wourld !!!</h1>
     <h2>Welcome to myWebSite</h2>
     <b>UI Design</b>
